--- a/scratch/d3-example.html
+++ b/scratch/d3-example.html
@@ -3,8 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Minimal D3 Example</title>
-<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
- 
+<script src="https://d3js.org/d3.v4.min.js"></script> 
 <style>
 .bar {
   fill: steelblue;
