--- a/text/tacitus/annals/book11.xhtml
+++ b/text/tacitus/annals/book11.xhtml
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h1>Tacitus, Annals, Book 11</h1>
-<ol>
+<ol about="urn:cts:latinLit:phi1351.phi005.perseus-eng1:11" typeof="rdf:Seq" rel="rdfs:member">
 <li property="skos:notation" id="1" content="Tacitus, Annals 11.1" typeof="skos:Concept" rdf:about="urn:cts:latinLit:phi1351.phi005.perseus-eng1:11.1">
 <p>MESSALINA believed that Valerius Asiaticus, who had been twice consul, was one of Poppaea's old lovers. At the same time she was looking greedily at the gardens which Lucullus had begun and which Asiaticus was now adorning with singular magnificence, and so she suborned Suilius to accuse both him and Poppaea. With Suilius was associated Sosibius, tutor to Britannicus, who was to give Claudius an apparently friendly warning to beware of a power and wealth which threatened the throne. Asiaticus, he said, had been the ringleader in the murder of a Caesar, and then had not feared to face an assembly of the Roman people, to own the deed, and challenge its glory for his own. Thus grown famous in the capital, and with a renown widely spread through the provinces, he was planning a journey to the armies of Germany. Born at Vienna, and supported by numerous and powerful connections, he would find it easy to rouse nations allied to his house. Claudius made no further inquiry, but sent Crispinus, commander of the Praetorians, with troops in hot haste, as though to put down a revolt. Crispinus found him at Baiae, loaded him with chains, and hurried him to Rome.</p>
 </li>
