--- a/text/tacitus/annals/book12.xhtml
+++ b/text/tacitus/annals/book12.xhtml
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h1>Tacitus, Annals, Book 12</h1>
-<ol>
+<ol about="urn:cts:latinLit:phi1351.phi005.perseus-eng1:12" typeof="rdf:Seq" rel="rdfs:member">
 <li property="skos:notation" id="1" content="Tacitus, Annals 12.1" typeof="skos:Concept" rdf:about="urn:cts:latinLit:phi1351.phi005.perseus-eng1:12.1">
 <p>THE destruction of Messalina shook the imperial house; for a strife arose among the freedmen, who should choose a wife for Claudius, impatient as he was of a single life and submissive to the rule of wives. The ladies were fired with no less jealousy. Each insisted on her rank, beauty, and fortune, and pointed to her claims to such a marriage. But the keenest competition was between Lollia Paulina, the daughter of Marcus Lollius, an ex-consul, and Julia Agrippina, the daughter of Germanicus. Callistus favoured the first, Pallas the second. Aelia Paetina however, of the family of the Tuberones, had the support of Narcissus. The emperor, who inclined now one way, now another, as he listened to this or that adviser, summoned the disputants to a conference and bade them express their opinions and give their reasons.</p>
 </li>
