--- a/text/tacitus/annals/book13.xhtml
+++ b/text/tacitus/annals/book13.xhtml
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h1>Tacitus, Annals, Book 13</h1>
-<ol>
+<ol about="urn:cts:latinLit:phi1351.phi005.perseus-eng1:13" typeof="rdf:Seq" rel="rdfs:member">
 <li property="skos:notation" id="1" content="Tacitus, Annals 13.1" typeof="skos:Concept" rdf:about="urn:cts:latinLit:phi1351.phi005.perseus-eng1:13.1">
 <p>The first death under the new emperor, that of Junius Silanus, proconsul of Asia, was, without Nero's knowledge, planned by the treachery of Agrippina. Not that Silanus had provoked destruction by any violence of temper, apathetic as he was, and so utterly despised under former despotisms, that Caius Caesar used to call him the golden sheep. The truth was that Agrippina, having contrived the murder of his brother Lucius Silanus, dreaded his vengeance; for it was the incessant popular talk that preference ought to be given over Nero, who was scarcely out of his boyhood and had gained the empire by crime, to a man of mature age, of blameless life, of noble birth, and, as a point then much regarded, of the line of the Caesars. Silanus in fact was the son of a great-grandson of Augustus. This was the cause of his destruction. The agents of the deed were Publius Celer, a Roman knight, and Helius, a freedman, men who had the charge of the emperor's domains in Asia. They gave the proconsul poison at a banquet, too openly to escape discovery.</p>
 <p>With no less precipitation, Narcissus, Claudius's freedman, whose quarrels with Agrippina I have mentioned, was driven to suicide by his cruel imprisonment and hopeless plight, even against the wishes of Nero, with whose yet concealed vices he was wonderfully in sympathy from his rapacity and extravagance.</p>
