--- a/text/tacitus/annals/book14.xhtml
+++ b/text/tacitus/annals/book14.xhtml
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h1>Tacitus, Annals, Book 14</h1>
-<ol>
+<ol about="urn:cts:latinLit:phi1351.phi005.perseus-eng1:14" typeof="rdf:Seq" rel="rdfs:member">
 <li property="skos:notation" id="1" content="Tacitus, Annals 14.1" typeof="skos:Concept" rdf:about="urn:cts:latinLit:phi1351.phi005.perseus-eng1:14.1">
 <p>IN the year of the consulship of Caius Vipstanus and Caius Fonteius, Nero deferred no more a long meditated crime. Length of power had matured his daring, and his passion for Poppaea daily grew more ardent. As the woman had no hope of marriage for herself or of Octavia's divorce while Agrippina lived, she would reproach the emperor with incessant vituperation and sometimes call him in jest a mere ward who was under the rule of others, and was so far from having empire that he had not even his liberty. "Why," she asked, "was her marriage put off? Was it, forsooth, her beauty and her ancestors, with their triumphal honours, that failed to please, or her being a mother, and her sincere heart? No; the fear was that as a wife at least she would divulge the wrongs of the Senate, and the wrath of the people at the arrogance and rapacity of his mother. If the only daughter-in-law Agrippina could bear was one who wished evil to her son, let her be restored to her union with Otho. She would go anywhere in the world, where she might hear of the insults heaped on the emperor, rather than witness them, and be also involved in his perils."</p>
 <p>These and the like complaints, rendered impressive by tears and by the cunning of an adulteress, no one checked, as all longed to see the mother's power broken, while not a person believed that the son's hatred would steel his heart to her murder.</p>
