--- a/text/tacitus/annals/book16.xhtml
+++ b/text/tacitus/annals/book16.xhtml
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h1>Tacitus, Annals, Book 16</h1>
-<ol>
+<ol about="urn:cts:latinLit:phi1351.phi005.perseus-eng1:16" typeof="rdf:Seq" rel="rdfs:member">
 <li property="skos:notation" id="1" content="Tacitus, Annals 16.1" typeof="skos:Concept" rdf:about="urn:cts:latinLit:phi1351.phi005.perseus-eng1:16.1">
 <p>FORTUNE soon afterwards made a dupe of Nero through his own credulity and the promises of Caesellius Bassus, a Carthaginian by birth and a man of a crazed imagination, who wrested a vision seen in the slumber of night into a confident expectation. He sailed to Rome, and having purchased admission to the emperor, he explained how he had discovered on his land a cave of immense depth, which contained a vast quantity of gold, not in the form of coin, but in the shapeless and ponderous masses of ancient days. In fact, he said, ingots of great weight lay there, with bars standing near them in another part of the cave, a treasure hidden for so many ages to increase the wealth of the present. Phoenician Dido, as he sought to show by inference, after fleeing from Tyre and founding Carthage, had concealed these riches in the fear that a new people might be demoralised by a superabundance of money, or that the Numidian kings, already for other reasons hostile, might by lust of gold be provoked to war.</p>
 </li>
