--- a/text/tacitus/annals/book2.xhtml
+++ b/text/tacitus/annals/book2.xhtml
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h1>Tacitus, Annals, Book 2</h1>
-<ol>
+<ol about="urn:cts:latinLit:phi1351.phi005.perseus-eng1:2" typeof="rdf:Seq" rel="rdfs:member">
 <li property="skos:notation" id="1" content="Tacitus, Annals 2.1" typeof="skos:Concept" rdf:about="urn:cts:latinLit:phi1351.phi005.perseus-eng1:2.1">
 <p>IN the consulship of Sisenna Statilius Taurus and Lucius Libo there was a commotion in the kingdoms and Roman provinces of the East. It had its origin among the Parthians, who disdained as a foreigner a king whom they had sought and received from Rome, though he was of the family of the Arsacids. This was Vonones, who had been given as an hostage to Augustus by Phraates. For although he had driven before him armies and generals from Rome, Phraates had shown to Augustus every token of reverence and had sent him some of his children, to cement the friendship, not so much from dread of us as from distrust of the loyalty of his countrymen.</p>
 </li>
