--- a/text/tacitus/annals/book5.xhtml
+++ b/text/tacitus/annals/book5.xhtml
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h1>Tacitus, Annals, Book 5</h1>
-<ol>
+<ol about="urn:cts:latinLit:phi1351.phi005.perseus-eng1:5" typeof="rdf:Set" rel="rdfs:member">
 <li property="skos:notation" id="1" content="Tacitus, Annals 5.1" typeof="skos:Concept" about="urn:cts:latinLit:phi1351.phi005.perseus-eng1:5.1">
 <p>IN the consulship of Rubellius and Fufius, both of whom had the surname Geminus, died in an advanced old age Julia Augusta. A Claudia by birth and by adoption a Livia and a Julia, she united the noblest blood of Rome. Her first marriage, by which she had children, was with Tiberius Nero, who, an exile during the Perusian war, returned to Rome when peace had been concluded between Sextus Pompeius and the triumvirs. After this Caesar, enamoured of her beauty, took her away from her husband, whether against her wish is uncertain. So impatient was he that he brought her to his house actually pregnant, not allowing time for her confinement. She had no subsequent issue, but allied as she was through the marriage of Agrippina and Germanicus to the blood of Augustus, her great-grandchildren were also his. In the purity of her home life she was of the ancient type, but was more gracious than was thought fitting in ladies of former days. An imperious mother and an amiable wife, she was a match for the diplomacy of her husband and the dissimulation of her son. Her funeral was simple, and her will long remained unexecuted. Her panegyric was pronounced from the Rostra by her great-grandson, Caius Caesar, who afterwards succeeded to power.</p>
 </li>
