--- a/text/tacitus/annals/book6.xhtml
+++ b/text/tacitus/annals/book6.xhtml
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h1>Tacitus, Annals, Book 6</h1>
-<ol>
+<ol about="urn:cts:latinLit:phi1351.phi005.perseus-eng1:6" typeof="rdf:Seq" rel="rdfs:member">
 <li property="skos:notation" id="1" content="Tacitus, Annals 6.1" typeof="skos:Concept" rdf:about="urn:cts:latinLit:phi1351.phi005.perseus-eng1:6.1">
 <p>CNEIUS Domitius and Camillus Scribonianus had entered on the consulship when the emperor, after crossing the channel which divides Capreae from Surrentum, sailed along Campania, in doubt whether he should enter Rome, or, possibly, simulating the intention of going thither, because he had resolved otherwise. He often landed at points in the neighbourhood, visited the gardens by the Tiber, but went back again to the cliffs and to the solitude of the sea shores, in shame at the vices and profligacies into which he had plunged so unrestrainedly that in the fashion of a despot he debauched the children of free-born citizens. It was not merely beauty and a handsome person which he felt as an incentive to his lust, but the modesty of childhood in some, and noble ancestry in others. Hitherto unknown terms were then for the first time invented, derived from the abominations of the place and the endless phases of sensuality. Slaves too were set over the work of seeking out and procuring, with rewards for the willing and threats to the reluctant, and if there was resistance from a relative or a parent, they used violence and force, and actually indulged their own passions as if dealing with captives.</p>
 </li>
