mark-up map references

--- a/text/war-diary/11-Bde/1917-08-26-intsum.html
+++ b/text/war-diary/11-Bde/1917-08-26-intsum.html
@@ -45,7 +45,7 @@ During the day his snipers were active. His trench mortars were livelier than us
 <h2>ARTILLERY</h2>
 <h3>Enemy</h3>
 <p>
-Enemy Artillery was more active at 2.30 p.m. Twenty 5.9's fell around trench junction I.31.c.20.05. and this place received attention at intervals during the night. Field guns shelled the Right of the Right Sub-Sector at 9 p.m. and harassed wiring parties of the left Coy. of the Right Sub-Sector at 10.30 p.m.
+Enemy Artillery was more active at 2.30 p.m. Twenty 5.9's fell around trench junction <span typeof="btmaps:GridReference">I.31.c.20.05.</span> and this place received attention at intervals during the night. Field guns shelled the Right of the Right Sub-Sector at 9 p.m. and harassed wiring parties of the left Coy. of the Right Sub-Sector at 10.30 p.m.
 </p>
 <p>
 MONCHY was shelled off and on throughout the period.
@@ -82,16 +82,16 @@ Hostile M.G's were again very active especially against the Right Coy. of the Ri
 
 <h2>INTELLIGENCE</h2>
 <p>
-Several small parties were seen at 5.30 p.m. coming down the road at I.22.d.5.5., at which point they entered a trench. 
+Several small parties were seen at 5.30 p.m. coming down the road at <span typeof="btmaps:GridReference" property="skos:notation" content="51b.I.22.d.5.5">I.22.d.5.5.</span>, at which point they entered a trench. 
 </p>
 <p>
-A small party was seen working at I.28.b.2.8.
+A small party was seen working at <span typeof="btmaps:GridReference" typeof="btmaps:GridReference" property="skos:notation" content="51b.I.28.b.2.8">I.28.b.2.8.</span>
 </p>
 <p>
-3 men wearing helmets were seen in DEVIL about I.32.c.5.3. they were fired on and disappeared. A few Germans wearing soft caps with peaks were seen in DEVIL at 10.50.
+3 men wearing helmets were seen in DEVIL about <span typeof="btmaps:GridReference">I.32.c.5.3.</span> they were fired on and disappeared. A few Germans wearing soft caps with peaks were seen in DEVIL at 10.50.
 </p>
 <p>
-An enemy working party was seen at about 2.30 p.m. from I.26.b.15.00. to I.26.b.0.5. Our Artillery were informed.
+An enemy working party was seen at about 2.30 p.m. from <span typeof="btmaps:GridReference">I.26.b.15.00.</span> to <span typeof="btmaps:GridReference">I.26.b.0.5.</span> Our Artillery were informed.
 </p>
 <p>
 Several Germans were seen during the day near PELVES.
@@ -103,7 +103,7 @@ When the enemy shelled our front line some shells dropped short, a rocket bursti
 The usual signals observed with a red lamp in JIGSAW WOOD.
 </p>
 <p>
-An enemy's working party was observed in front of DEVILS TRENCH at I.31.b.95.35 about 9.50 p.m.
+An enemy's working party was observed in front of DEVILS TRENCH at <span typeof="btmaps:GridReference">I.31.b.95.35</span> about 9.50 p.m.
 The Artillery were informed and six rounds were fired at them. This working party was not again heard or seen.
 </p>
 <p>
