--- a/text/war-diary/11-Bde/1917-08-25-intsum.html
+++ b/text/war-diary/11-Bde/1917-08-25-intsum.html
@@ -94,7 +94,7 @@ E.A's were observed over our line at 9 a.m.
 At various times during the afternoon a heliograph was observed signalling from a tree in VICTORIA COPSE.
 </p>
 <p>
-From BRIDOON a party of the enemey was seen at I.21.a.75.35. walking about. It is thought that they live in this vicinity.
+From BRIDOON a party of the enemy was seen at I.21.a.75.35. walking about. It is thought that they live in this vicinity.
 </p>
 
 
