fixed broken link

--- a/text/war-diary/11-Bde/1917-08-map.xhtml
+++ b/text/war-diary/11-Bde/1917-08-map.xhtml
@@ -16,7 +16,7 @@
 <h1>Map</h1>
 <p>The map below can be found in the War Diary of 11th Infantry Brigade, August/September 1917 (TNA: WO 95/1492/1, p 26):</p>
 
-<img src="map.png"/>
+<img src="1917-08-map.png"/>
 
 </body>
 </html>
