--- a/text/war-diary/11-Bde/1917-08-26-intsum.xhtml
+++ b/text/war-diary/11-Bde/1917-08-26-intsum.xhtml
@@ -85,7 +85,7 @@ Hostile M.G's were again very active especially against the Right Coy. of the Ri
 Several small parties were seen at 5.30 p.m. coming down the road at <span typeof="btmaps:GridReference" property="skos:notation" content="51b.I.22.d.5.5">I.22.d.5.5.</span>, at which point they entered a trench. 
 </p>
 <p>
-A small party was seen working at <span typeof="btmaps:GridReference" typeof="btmaps:GridReference" property="skos:notation" content="51b.I.28.b.2.8">I.28.b.2.8.</span>
+A small party was seen working at <span typeof="btmaps:GridReference" property="skos:notation" content="51b.I.28.b.2.8">I.28.b.2.8.</span>
 </p>
 <p>
 3 men wearing helmets were seen in DEVIL about <span typeof="btmaps:GridReference">I.32.c.5.3.</span> they were fired on and disappeared. A few Germans wearing soft caps with peaks were seen in DEVIL at 10.50.
