--- a/text/war-diary/11-Bde/1917-08-30-intsum.xhtml
+++ b/text/war-diary/11-Bde/1917-08-30-intsum.xhtml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:dc="http://purl.org/dc/elements/1.1/" 
 	xmlns:btmaps="http://rdf.muninn-project.org/ontologies/btmaps#"
