transcripts of intelligence reports

--- a/text/war-diary/11-Bde/1917-08-25-intsum.xhtml
+++ b/text/war-diary/11-Bde/1917-08-25-intsum.xhtml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:dc="http://purl.org/dc/elements/1.1/" 
 	xmlns:btmaps="http://rdf.muninn-project.org/ontologies/btmaps#"
@@ -97,7 +98,7 @@ At various times during the afternoon a heliograph was observed signalling from 
 From BRIDOON a party of the enemy was seen at I.21.a.75.35. walking about. It is thought that they live in this vicinity.
 </p>
 
-
+<br/>
 <p class="signed"><datetime content="1917-08-25">25/8/17</datetime>. (Signed) For B.G.C., 11th Infantry Brigade.</p>
 
 
