--- a/examples/family/workbook.xhtml
+++ b/examples/family/workbook.xhtml
@@ -97,7 +97,7 @@ After quitting Macedonia, before he could declare himself a candidate for the co
 
 <p class="note">We can take the claims of familial relationships, rewritten or not, and make a graph of people linked parent to child. The results can be analysed to check
 the facts. For example, there's something wrong if the graph is not a tree, or if a child node has more than two parents. So far, the family tree has the same structure whether claims are rewritten or not.
-The result (rewritten) is C.</p>
+The result (rewritten) is:</p>
 
 	<img class="small" src="Suet-Aug-4-C.svg" alt="family tree from Suet. Aug. 4" />
 
