reports from Battle of Arras, 1917

--- a/text/war-diary/11-Bde/1917-08-26-intsum.xhtml
+++ b/text/war-diary/11-Bde/1917-08-26-intsum.xhtml
@@ -7,13 +7,14 @@
 	>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link type="text/css" href="intsum.css" rel="stylesheet"/>
+<link type="text/css" href="report.css" rel="stylesheet"/>
 <title>Daily Intelligence Summary</title>
 <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/"/>
 <meta name="DC.source" content="The National Archives of the UK (TNA): WO 95/1492/1, pp 55-56"/>
 <meta name="DC.identifier" content="11th Infantry Brigade Daily Intelligence Summary, 26 August 1917"/>
 </head>
 <body>
+<article>
 <h1>11th Infantry Brigade - Daily Intelligence Summary</h1>
 <p class="report_date">25/8/17 - 26/8/17</p>
 
@@ -128,5 +129,6 @@ Unusual enemy activity during the afternoon. At 2.40 p.m. the enemy shelled LONE
 <p>
 MONCHY was shelled with 5.9's or 8" at about 3 p.m.
 </p>
+</article>
 </body>
 </html>
