--- a/text/war-diary/11-Bde/1917-08-31-intsum.xhtml
+++ b/text/war-diary/11-Bde/1917-08-31-intsum.xhtml
@@ -7,13 +7,14 @@
 	>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link type="text/css" href="intsum.css" rel="stylesheet"/>
+<link type="text/css" href="report.css" rel="stylesheet"/>
 <title>Daily Intelligence Summary</title>
 <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/"/>
 <meta name="DC.source" content="The National Archives of the UK (TNA): WO 95/1492/1, p 63"/>
 <meta name="DC.identifier" content="11th Infantry Brigade Daily Intelligence Summary, 31 August 1917"/>
 </head>
 <body>
+<article>
 <h1>11th Infantry Brigade - Daily Intelligence Summary</h1>
 <p class="report_date">30/8/17 - 31/8/17</p>
 
@@ -78,5 +79,6 @@ The flash of an enemy T.M. was observed in DEVILS TRENCH at about I.32.a.00.50. 
 <br/>
 <p class="signed"><datetime content="1917-08-31">31st August 1917</datetime>. (Signed) for Lt. Col., Commanding 11th Infantry Brigade.</p>
 
+</article>
 </body>
 </html>
