--- a/text/war-diary/11-Bde/1917-08-21-intsum.xhtml
+++ b/text/war-diary/11-Bde/1917-08-21-intsum.xhtml
@@ -21,7 +21,7 @@
 <h2>OPERATIONS</h2>
 
 <p>
-An Officers Patrol went out from O.2/8 at mifnight towards ARROW S. of BIT LANE. It reached a point about 40 yds. W. of this trench. Sounds of work in the trench were heard as though poles were being driven in. Voices were also heard. The sounds afterwards ceased and "Very" lights were directed towards the patrol.
+An Officers Patrol went out from O.2/8 at midnight towards ARROW S. of BIT LANE. It reached a point about 40 yds. W. of this trench. Sounds of work in the trench were heard as though poles were being driven in. Voices were also heard. The sounds afterwards ceased and "Very" lights were directed towards the patrol.
 </p>
 <p>
 Sounds of work in DEVIL were also heard.
