--- a/text/war-diary/11-Bde/1917-08-30-intsum.xhtml
+++ b/text/war-diary/11-Bde/1917-08-30-intsum.xhtml
@@ -65,7 +65,7 @@ A Minnie was very active on <span class="doubtful">SNAFFLE</span> from ARROW SAP
 About 7.0 p.m. enemy fire 14 rounds of medium T.M. at our wire in fron of I.31/1.
 </p>
 <p>
-Between 11 p.m. and " a.m. gain active. A direct hit was obtained on junction of CHAIN SUPPORT and LINK ALLEY. Two mortars fell in our wire <span class="doubtful">near</span> T Sap.
+Between 11 p.m. and 2 a.m. a gain active. A direct hit was obtained on junction of CHAIN SUPPORT and LINK ALLEY. Two mortars fell in our wire <span class="doubtful">near</span> T Sap.
 </p>
 
 <h2>MACHINE GUNS</h2>
