--- a/examples/chronology/example.xhtml
+++ b/examples/chronology/example.xhtml
@@ -18,20 +18,19 @@
 <h2>A chronology of events.</h2>
 
 <p class="note">
-We use OWL:Time and RDFa to model the chronology as a sequence of disjoint intervals. Each interval is a container for instants or intervals that represent events.
-This lets us construct chronologies as preorders.
+I'm using OWL:Time and RDFa to model a chronology as a sequence of disjoint intervals. Each interval is a container for instants or intervals that represent events. This lets me construct chronologies as preorders.
 </p>
 
 <p class="note">
-	Each container interval is an HTML article. Events within an HTML article are inside the interval. Any interval or instant inside an HTML article is
-	'before' all intervals or instants in subsequent HTML article. An interval or instant inside an HTML article is only before another in the same article if explicitly 
+	Each container interval is an HTML article. Events inside an HTML article are assumed to occur within the interval. Any interval or instant inside an HTML article is
+	assumed to be 'before' all intervals or instants in subsequent HTML articles. An interval or instant inside an HTML article is only before another in the same article if explicitly 
 	stated, and is otherwise not comparable. 
 </p>
 
 <p class="note">
 	Ideally, the HTML articles represent contiguous periods of time. This does not need to be made explicit. Instead, each article may describe a single interval of 
 	some common type, such as the span of a calendar year, or the reign of a monarch; so that applying the ordering rules to these intervals results in a <a href="https://en.wikipedia.org/wiki/Total_order#Chains">chain</a>.
-	In this example, each HTML article represents a consulship.
+	In this example, each HTML article represents a consulship. A horizontal line separates articles.
 </p>
 
 
@@ -344,19 +343,19 @@ After burning Mattium, the capital of the tribe, and ravaging the open country, 
 
 <h2>Results</h2>
 <p class="note">
-Processing the above gives this preorder:
+Processing the above gives this preorder
 </p>
 
 <img src="events.svg" alt="A chronology of events" />
 
 <p class="note">
-and the chain of consulships is:
+... and the chain of consulships is
 </p>
 
 <img class="small" src="consuls.svg" alt="A chain of consulships" />
 
 <p class="note">
-For more, see <a href="https://github.com/knoxa/linked-text/blob/master/reasoning/roman/chronology.md">here</a>.
+This treats events as a collection of objects that can be mapped to preorders in interesting ways that preserve the 'before' relationship described. For further discussion, see <a href="https://github.com/knoxa/linked-text/blob/master/reasoning/roman/chronology.md">here</a>.
 </p>
 </body>
 </html>
