--- a/text/war-diary/11-Bde/1917-08-18-intsum.xhtml
+++ b/text/war-diary/11-Bde/1917-08-18-intsum.xhtml
@@ -12,7 +12,7 @@
 <title>Daily Intelligence Summary</title>
 <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/"/>
 <meta name="DC.source" content="The National Archives of the UK (TNA): WO 95/1492/1, pp 40-41"/>
-<meta name="DC.identifier" content="11th Infantry Brigade Daily Intelligence Summary, 18 Sugust 1917"/>
+<meta name="DC.identifier" content="11th Infantry Brigade Daily Intelligence Summary, 18 August 1917"/>
 </head>
 <body>
 <h1>11th Infantry Brigade - Daily Intelligence Summary</h1>
