two month of diary entries transcribed

--- a/text/war-diary/11-Bde/index.xhtml
+++ b/text/war-diary/11-Bde/index.xhtml
@@ -28,7 +28,7 @@
 <div>
 <p><span class="reftna">WO 95/1491/2, pp 2-3</span></p>
 <p class="contents">Army Form C. 2118.</p>
-<p class="description">Diary entries for March 1917</p>
+<p class="description">Diary entries for <a href="1917-03-diary.xhtml">March 1917</a></p>
 </div>
 
 <div>
@@ -104,13 +104,13 @@
 <div>
 <p><span class="reftna">WO 95/1491/2, pp 24-25</span></p>
 <p class="contents">11th Infantry Brigade Instructions No. 1.</p>
-<p class="description">Re Dress, Equipment etc.. Dated <datetime content="1917-03-16">16th March, 1917</datetime>.</p>
+<p class="description">Re Dress, Equipment etc. Dated <datetime content="1917-03-16">16th March, 1917</datetime>.</p>
 </div>
 
 <div>
 <p><span class="reftna">WO 95/1491/2, pp 26-27</span></p>
 <p class="contents">11th Infantry Brigade Instructions No. 1.</p>
-<p class="description">Re Dress, Equipment etc.. Dated <datetime content="1917-03-16">16th March, 1917</datetime>.</p>
+<p class="description">Re Dress, Equipment etc. Dated <datetime content="1917-03-16">16th March, 1917</datetime>.</p>
 </div>
 
 <div>
@@ -374,7 +374,7 @@
 <div>
 <p><span class="reftna">WO 95/1491/3, pp 3-22</span></p>
 <p class="contents">Army Form C. 2118.</p>
-<p class="description">Diary entries for April 1917</p>
+<p class="description">Diary entries for <a href="1917-04-diary.xhtml">April 1917</a></p>
 </div>
 
 <div>
