changed folder structure

--- a/reasoning/argument/rewrite.xhtml
+++ b/reasoning/argument/rewrite.xhtml
@@ -30,7 +30,7 @@ This is an example of rewriting claims to resolve entity references.
 	Germanicus married Agrippina, the daughter of Marcus Agrippa and Julia, by whom he had nine children, two of whom died in their infancy, and another a few years after;<span class="ellipsis"> ...</span>
 	</blockquote>
 
-	<p class="note">We make a claim ...</p>
+	<p class="note">I (or a notional NLP agent) make a claim ...</p>
 	
 	<div class="nlp">
 		<ul>
@@ -38,7 +38,7 @@ This is an example of rewriting claims to resolve entity references.
 		</ul>
 	</div>
 
-	<p class="note">Julia is ambiguous, so we create a rewrite rule:</p>
+	<p class="note">Julia is ambiguous, so I create a rewrite rule:</p>
 	
 	<div class="analysis">
 		<p class="rewrite">"Julia" refers to <span class="name">Julia the Elder</span>.</p>
