--- a/examples/chronology/example.xhtml
+++ b/examples/chronology/example.xhtml
@@ -355,7 +355,7 @@ Processing the above gives this preorder
 <img class="small" src="consuls.svg" alt="A chain of consulships" />
 
 <p class="note">
-This treats events as a collection of objects that can be mapped to preorders in interesting ways that preserve the 'before' relationship described. For further discussion, see <a href="https://github.com/knoxa/linked-text/blob/master/reasoning/chronology.md">here</a>.
+This treats events as a collection of objects that can be mapped to preorders in interesting ways that preserve the 'before' relationship described. For further discussion, see <a href="/reasoning/chronology">here</a>.
 </p>
 </body>
 </html>
