--- a/examples/family/workbook.xhtml
+++ b/examples/family/workbook.xhtml
@@ -373,7 +373,7 @@ The story so far is:
 <img src="julio-claudian.svg" alt="Julio-Claudian family tree, the story so far" />
 
 <p class="note">
-The unknown parent of Drusus and Tiberius looks like a good next target; but rather than making this worked example more complicated, we'll continue the effort <a href="https://github.com/knoxa/linked-text/blob/master/reasoning/roman/family.md">elsewhere</a>.
+The unknown parent of Drusus and Tiberius looks like a good next target; but rather than making this worked example more complicated, we'll continue the effort <a href="/reasoning/roman/family">elsewhere</a>.
 </p>
 
 </body>
